Large update for Jakarta Servlet and Java 17