@@ -15,13 +15,13 @@ public class IntegerSettingTest extends TestCase {
 
     public void testConvertToTypedValue() {
         SettingType type = new IntegerSetting();
-        assertEquals(new Integer(51), type.convertToTypedValue("51"));
+        assertEquals(Integer.valueOf(51), type.convertToTypedValue("51"));
         assertNull(type.convertToTypedValue("kuku"));
     }
 
     public void testConvertToStringValue() {
         SettingType type = new IntegerSetting();
-        assertEquals("52", type.convertToStringValue(new Integer(52)));
+        assertEquals("52", type.convertToStringValue(Integer.valueOf(52)));
         assertNull(type.convertToStringValue(null));
     }
 }
